2005-06-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* some more LaTeX tags for texts
	* simulation warning reset before simulation starts
	* save 4 digits for unicode in text painting
	* QucsLib: change component with cursor up/down
	* repaint after return in property line edit
	* fixed bug that erases port names at undo/redo
	* fixed bug placing menu on right mouse click during paste

2005-06-09  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new tool: library manager
	* ports in schematic symbol show their names instead of their
	numbers, they also can now be rotated
	* diagram labels and grafik text can now contain special
	characters (e.g. greek letters)
	* some work for re-structure
	* avoid selections of graph and marker during printing
	* speed up loading datasets
	* fixed bug at splitting labeled wires
	* fixed bug that cut off digits in scientific numbers
	* error message for variable in tabular if other indep
	variables then the first
	* fixed bug in printing reversed logarithmic axis in 3D
	diagram
	* search dialog for QucsLib
	* correct size for simulation component schemes
	* precise component text boundings
	* text in statusbar if warnings in simulation
	* 3D diagram dialog: show 2D projection preview
	* little gap between graph and diagram boundings for Cartesian

2005-05-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug scaling independent x axis in Cartesian diagram

2005-05-21  Stefan Jahn  <stefan@lkcc.org>

	* dialogs/simmessage.cpp (nextSPICE): Closing stdin of
	qucsconv process for immediate error reports if there is
	no such file to convert.

	* dialogs/qucssettingsdialog.cpp (slotApply): Applying change
	in background color to editable properties on schematic.

2005-05-16  Stefan Jahn  <stefan@lkcc.org>

	* qucsactions.cpp (editFile): Do not pass empty command line 
	arguments.

2005-05-15  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
