@@ -62,6 +62,7 @@ QString complexRad (double, double, int Precision=3);
 QString StringNum  (double, char form='g', int Precision=3);
 void    str2num    (const QString&, double&, QString&, double&);
 QString StringNiceNum(double);
+void    convert2Unicode(QString&);
 
 // just dummies for empty lists
 extern QPtrList<Wire>      SymbolWires;
