@@ -1,3 +1,9 @@
+2005-07-14  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
+
+	* fixed segfault on insert diagram on untitled page
+	* fixed bug on rotating text paintings
+	* fixed bug on rotating text in subcircuit symbols
+
 2005-06-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* some more LaTeX tags for texts
